# reqwest-memo

./: .gitignore  Cargo.toml  LICENSE.md  README.md
src/: lib.rs  main.rs  middleware.rs
tests/: client.rs
