[package]
name = "memo"
version = "0.1.0"
edition = "2024"
description = "A library for caching HTTP responses"

[lib]
name = "memo"
path = "src/lib.rs"

[[bin]]
name = "memo-bin"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["cookies", "blocking"] }
reqwest-middleware = "0.2"
async-trait = "0.1"
task-local-extensions = "0.1.4"
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
http = "0.2"
